adds basic html and css

--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
+
 <html>
     <head>
         <meta charset="utf-8">
@@ -10,13 +7,50 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        
-        <script src="" async defer></script>
+        <header>
+            <h1>
+                <img src="./assets/logo.svg" alt="Boyce logo">
+                <nav>
+                    <a href="#">Grid</a>
+                    <a href="#">List</a>
+                    <a href="#">About</a>
+                </nav>
+            </h1>
+        </header>
+        <section class="photos">
+            <div class="photo">
+                <img src="./assets/image_1.jpg" alt="first image">
+            </div>
+            <div class="photo">
+                <img src="./assets/image_2.jpg" alt="second image">
+            </div>
+            <div class="photo">
+                <img src="./assets/image_3.jpg" alt="third image">
+            </div>
+            <div class="photo">
+                <img src="./assets/image_4.jpg" alt="fourth image">
+            </div>
+            <div class="photo">
+                <img src="./assets/image_5.jpg" alt="fifth image">
+            </div>
+            <div class="photo">
+                <img src="./assets/image_6.jpg" alt="sixth image">
+            </div>
+            <div class="photo">
+                <img src="./assets/image_7.jpg" alt="seventh image">
+            </div>
+            <div class="photo">
+                <img src="./assets/image_8.jpg" alt="eighth image">
+            </div>
+            <div class="photo">
+                <img src="./assets/image_9.jpg" alt="nineth image">
+            </div>
+        </section>
+        <footer>
+
+        </footer>
     </body>
 </html>
