adds css styling for grid and footer

--- a/index.html
+++ b/index.html
@@ -13,30 +13,30 @@
         <header>
             <h1>
                 <img src="./assets/logo.svg" alt="Boyce logo">
-                <nav>
-                    <a href="#">Grid</a>
-                    <a href="#">List</a>
-                    <a href="#">About</a>
-                </nav>
             </h1>
+            <nav>
+                <a href="#" class="active">Grid</a>
+                <a href="#">List</a>
+                <a href="#">About</a>
+            </nav>
         </header>
         <section class="photos">
             <div class="photo">
                 <img src="./assets/image_1.jpg" alt="first image">
             </div>
-            <div class="photo">
+            <div class="photo small">
                 <img src="./assets/image_2.jpg" alt="second image">
             </div>
             <div class="photo">
                 <img src="./assets/image_3.jpg" alt="third image">
             </div>
-            <div class="photo">
+            <div class="photo small">
                 <img src="./assets/image_4.jpg" alt="fourth image">
             </div>
             <div class="photo">
                 <img src="./assets/image_5.jpg" alt="fifth image">
             </div>
-            <div class="photo">
+            <div class="photo small">
                 <img src="./assets/image_6.jpg" alt="sixth image">
             </div>
             <div class="photo">
@@ -45,12 +45,23 @@
             <div class="photo">
                 <img src="./assets/image_8.jpg" alt="eighth image">
             </div>
-            <div class="photo">
+            <div class="photo small">
                 <img src="./assets/image_9.jpg" alt="nineth image">
             </div>
         </section>
         <footer>
-
+            <p>Copyright &copy 2020</p>
+            <nav>
+                <a href="#">
+                    <img src="./assets/icon-facebook.svg" alt="">
+                </a>
+                <a href="#">
+                    <img src="./assets/icon-instagram.svg" alt="">
+                </a>
+                <a href="#">
+                    <img src="./assets/icon-twitter.svg" alt="">
+                </a>
+            </nav>
         </footer>
     </body>
 </html>
