--- a/index.html
+++ b/index.html
@@ -22,30 +22,57 @@
         </header>
         <section class="photos">
             <div class="photo">
+                <div class="overlay">
+                    <h2>Black Line Yellow Box</h2>
+                </div>
                 <img src="./assets/image_1.jpg" alt="first image">
             </div>
             <div class="photo small">
+                <div class="overlay">
+                    <h2>Desk Flowers</h2>
+                </div>
                 <img src="./assets/image_2.jpg" alt="second image">
             </div>
             <div class="photo">
+                <div class="overlay">
+                    <h2>Fence Sign Reach</h2>
+                </div>
                 <img src="./assets/image_3.jpg" alt="third image">
             </div>
             <div class="photo small">
+                <div class="overlay">
+                    <h2>Green Grass Line</h2>
+                </div>
                 <img src="./assets/image_4.jpg" alt="fourth image">
             </div>
             <div class="photo">
+                <div class="overlay">
+                    <h2>Fill Outline</h2>
+                </div>
                 <img src="./assets/image_5.jpg" alt="fifth image">
             </div>
             <div class="photo small">
+                <div class="overlay">
+                    <h2>Bollard Bag Black Grey</h2>
+                </div>
                 <img src="./assets/image_6.jpg" alt="sixth image">
             </div>
             <div class="photo">
+                <div class="overlay">
+                    <h2>Three Shutters</h2>
+                </div>
                 <img src="./assets/image_7.jpg" alt="seventh image">
             </div>
             <div class="photo">
+                <div class="overlay">
+                    <h2>Green Bag White Wall</h2>
+                </div>
                 <img src="./assets/image_8.jpg" alt="eighth image">
             </div>
             <div class="photo small">
+                <div class="overlay">
+                    <h2>Temporary Barrier Bin</h2>
+                </div>
                 <img src="./assets/image_9.jpg" alt="nineth image">
             </div>
         </section>
