finised html, css for list page and adds media queries

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </h1>
             <nav>
                 <a href="#" class="active">Grid</a>
-                <a href="#">List</a>
+                <a href="list.html">List</a>
                 <a href="#">About</a>
             </nav>
         </header>
